--- a/.github/workflows/aptible.yml
+++ b/.github/workflows/aptible.yml
@@ -1,27 +1,22 @@
-name: Deploy to Aptible
+name: aptible
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+  workflow_dispatch: {}
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Deploy to Aptible
-        uses: quay.io/aptible/aptible-deploy-action@v4
-        with:
-          type: git
-          app: stleech
-          environment: leechst
-          username: ${{ secrets.APTIBLE_USERNAME }}
-          password: ${{ secrets.APTIBLE_PASSWORD }}
-          git_remote: primetime.aptible.com
-          auth_root_url: https://auth.aptible.com
-          api_root_url: https://api.aptible.com
-          aptible_remote: aptible
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    - name: Deploy to Aptible
+      uses: aptible/aptible-deploy-action@v4
+      with:
+        type: git
+        app: stleech
+        environment: leechst
+        username: ${{ secrets.APTIBLE_USERNAME }}
+        password: ${{ secrets.APTIBLE_PASSWORD }}
