--- a/.github/workflows/aptible.yml
+++ b/.github/workflows/aptible.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        fetch-depth: 0
+        ref: 'refs/heads/deploy'
     - name: Deploy to Aptible
       uses: aptible/aptible-deploy-action@v4
       with:
