--- a/.github/workflows/aptible.yml
+++ b/.github/workflows/aptible.yml
@@ -4,19 +4,19 @@ on:
   push:
     branches: [main]
   workflow_dispatch: {}
-  jobs:
+
+jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout deploy branch
-        uses: actions/checkout@v2
-        with:
-          ref: 'refs/heads/deploy'
-      - name: Deploy to Aptible
-        uses: aptible/aptible-deploy-action@v4
-        with:
-          type: git
-          app: stleech
-          environment: leechst
-          username: ${{ secrets.APTIBLE_USERNAME }}
-          password: ${{ secrets.APTIBLE_PASSWORD }}
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    - name: Deploy to Aptible
+      uses: aptible/aptible-deploy-action@v4
+      with:
+        type: git
+        app: stleech
+        environment: leechst
+        username: ${{ secrets.APTIBLE_USERNAME }}
+        password: ${{ secrets.APTIBLE_PASSWORD }}
