--- a/.github/workflows/aptible.yml
+++ b/.github/workflows/aptible.yml
@@ -16,7 +16,7 @@ jobs:
       uses: aptible/aptible-deploy-action@v4
       with:
         type: git
-        app: stleech
+        app: leechbot
         environment: leechst
         username: ${{ secrets.APTIBLE_USERNAME }}
         password: ${{ secrets.APTIBLE_PASSWORD }}
